# websift

./: .gitignore  CMakeLists.txt  Makefile.test  README.md  plan.md
build-release/: CMakeCache.txt  Makefile  cmake_install.cmake  extract_texts  gopher_filter_batch  gopher_filter_cli  websift
scripts/: benchmark.py  benchmark_python_gopher.py
src/: extract_texts.cpp  filters.cpp  filters.hpp  gopher_cli.cpp  gopher_filter_batch.cpp  main.cpp  utils.hpp  warc.cpp  warc.hpp
tests/: diff_report.csv  regression_test.py  test_gopher_filter_batch_streaming.py  test_gopher_parity.py  test_websift_streaming.py
tests/test_data/: baseline.csv
